# physicalai-rebot-b601-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/: .release-please-manifest.json  CODEOWNERS  dependency_review_config.yml  release-please-config.json  renovate.json5
.github/workflows/: dependency-review.yml  lint-test.yml  pr-title.yml  publish-testpypi.yml  publish.yml  release-please.yml  release.yml  renovate-config-validator.yml  renovate.yml  scorecards.yml  secret-scan.yml  security-scan.yml
scripts/: smoke.py
src/physicalai_rebot_b601_plugin/: _urdf.py  dm.py  leader.py  rs.py  studio_catalog.py
tests/: test_leader.py  test_studio_catalog.py
urdf/rebot-b601-rs/urdf/: 00-arm-rs_asm-v3.csv
urdf/stararm102/urdf/: stararm102_description.urdf
