[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physicalai-rebot-b601-plugin"
version = "0.1.1"
description = "Third-party Seeed reBot B601 robot arm plugin for PhysicalAI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "physicalai>=0.1.1",
    "numpy>=1.24",
    "loguru>=0.7",
    "motorbridge>=0.4.4",
    "motorbridge-smart-servo>=0.0.4",
]

[project.optional-dependencies]
tests = ["pytest"]

[dependency-groups]
dev = ["pytest", "mypy", "ruff>=0.15.12", "prek"]

[project.urls]
Homepage = "https://github.com/MarkRedeman/physicalai-rebot-b601-plugin"
Repository = "https://github.com/MarkRedeman/physicalai-rebot-b601-plugin"
Issues = "https://github.com/MarkRedeman/physicalai-rebot-b601-plugin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/physicalai_rebot_b601_plugin"]

[tool.hatch.build.targets.wheel.force-include]
"urdf" = "urdf"

[tool.hatch.build.targets.sdist]
include = [
    "src/physicalai_rebot_b601_plugin/**",
    "urdf/**",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"

[tool.ruff]
target-version = "py313"
line-length = 120
preview = true
src = ["src", "tests"]
extend-exclude = ["tests", "urdf", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with Ruff formatter
    "CPY001",  # No copyright headers
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/physicalai_rebot_b601_plugin/__init__.py" = ["PLC0415"]
"src/physicalai_rebot_b601_plugin/dm.py" = ["ARG002", "PLR0913"]
"src/physicalai_rebot_b601_plugin/rs.py" = ["ARG002", "PLR0913"]
"src/physicalai_rebot_b601_plugin/leader.py" = ["ARG002", "PLR6301"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 15

[tool.markdownlint]
default = true

[tool.markdownlint.MD001]
enabled = true

[tool.markdownlint.MD013]
line_length = 1000

[tool.markdownlint.MD024]
allow_different_nesting = true
siblings_only = true

[tool.markdownlint.MD033]
enabled = false

[tool.markdownlint.MD034]
enabled = false

[tool.markdownlint.MD036]
enabled = false

[tool.markdownlint.MD041]
enabled = false

[tool.markdownlint.MD042]
enabled = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "except ImportError:",
]

[tool.coverage.paths]
source = ["src"]

